# Raytracer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  hw3.sln
examples/: CMakeLists.txt  boxexample.cpp  dielectricexample1.cpp  dielectricexample2.cpp  diffuseexample.cpp  importexample.cpp  metalexample1.cpp  perlintextureexample.cpp  randomspherescene.cpp  textureexample1.cpp  textureexample2.cpp
examples/owl_zun/: owl_zun.gltf
hw3/: geometry.cpp  geometry.h  hw3.vcxproj  hw3.vcxproj.filters  main.cpp  readfile.cpp  readfile.h  tests.h  transform.cpp  transform.h
my_scenes/: scene1.txt  scene2.txt  scene3.txt  scene4.txt  scene5.txt  scene6.txt
scenes/my_scenes/: scene1.txt  scene4.txt
scenes/testscenes/: scene2-camera1 copy.test  scene4.test
src/: CMakeLists.txt  boundingbox.cpp  boundingbox.h  camera.cpp  camera.h  diffusematerial.cpp  diffusematerial.h  flatcolortexture.cpp  flatcolortexture.h  geometry.cpp  geometry.h  image.cpp  image.h  importer.cpp  importer.h  intersectioninfo.h  light.cpp  light.h  main.cpp  mat3.cpp  mat3.h  mat4.cpp  mat4.h  material.h  phongmaterial.cpp  phongmaterial.h  progressindicator.cpp  progressindicator.h  ray.cpp  ray.h  raytracer.cpp  raytracer.h  readfile.cpp  readfile.h  rt_stb_image.h  scene.cpp  scene.h  shape.cpp  shape.h  tests.cpp  (+13 more)
src/materials/: dielectricmaterial.cpp  dielectricmaterial.h  diffusematerial.cpp  diffusematerial.h  lightmaterial.cpp  lightmaterial.h  material.h  metalmaterial.cpp  metalmaterial.h  phongmaterial.cpp  phongmaterial.h
src/math/: mat3.cpp  mat3.h  mat4.cpp  mat4.h  transform.cpp  transform.h  vec.cpp  vec.h
src/shapes/: abstractshape.h  boundingboxnode.cpp  boundingboxnode.h  rect.cpp  rect.h  shape.cpp  shape.h  shapelist.cpp  shapelist.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/textures/: checkeredtexture.cpp  checkeredtexture.h  flatcolortexture.cpp  flatcolortexture.h  imagetexture.cpp  imagetexture.h  perlintexture.cpp  perlintexture.h  texture.h
tests/: CMakeLists.txt  configure.h.in  runtests.cpp  testboundingbox.cpp  testimage.cpp  testmat3.cpp  testmat4.cpp  testray.cpp  testrenderscene.cpp  testshapes.cpp  testtransform.cpp  testutils.h  testvec.cpp
testscenes/: scene1.test  scene3 - Copy.test
